-added dependecy management and removed jars